# libstartup

./: .gitignore  CMakeLists.txt  README.md  bob.toml  bootstrap.py  build.py  extract_sizes.py  requirements.txt
.github/workflows/: build-target.yml
cmake/: cmsis.cmake  config_options.h.in  stm32.cmake  version.h.in
cmake/bbuilder/: bob.cmake  bob_compiler.cmake  bob_firmware_image.cmake  bob_options.cmake  cmsis.cmake  stm32.cmake  toolchain-stm32f767.cmake
doc/experiment_size_timing/: experiment_size.md
doc/experiment_size_timing/01_baseline/: libstartup_example.bsz  libstartup_example.dasm  libstartup_example.elf  libstartup_example.elf.map  libstartup_example.hex  libstartup_example.ssz
doc/experiment_size_timing/02_tiny/: libstartup_example.bsz  libstartup_example.dasm  libstartup_example.elf  libstartup_example.elf.map  libstartup_example.hex  libstartup_example.ssz
etc/: size_ticks.ods
example/: CMakeLists.txt  cabi.c  cxxabi.cpp  foo.cpp  foo.h  main.cpp  new_delete.cpp  sections.cpp  timeout.cpp  timeout.h
experiments/: CMakeLists.txt
experiments/001_st_baseline/: CMakeLists.txt
experiments/002_st_cpp_options/: CMakeLists.txt
experiments/003_st_nostartfiles/: CMakeLists.txt
experiments/004_st_nosys/: CMakeLists.txt
experiments/005_custom_startup/: CMakeLists.txt  reset_handler.s  system.cpp  vector_table.cpp
experiments/006_custom_linkerscript/: CMakeLists.txt  sections.ld  system.cpp  system.h
experiments/007_custom_tiny_memset/: CMakeLists.txt  system.cpp
experiments/008_custom_inline/: CMakeLists.txt  system.cpp
experiments/010_modm/: CMakeLists.txt  assert.h  assert.hpp  cabi.c  cxxabi.cpp  device.hpp  linkerscript.ld  no_heap.c  register.hpp  startup.c  startup_platform.c  system.cpp  vectors.c  vectors.hpp
experiments/011_libgloss/: CMakeLists.txt  compatability.ld  reset_handler.s  sections.ld  syscall.c
experiments/common/: init.cpp  main.cpp
include/: cyclecounter.h
linkerscripts/stm32f7/: memory.ld  memory_flash.ld  memory_itcm.ld  sections copy.ld  sections.ld
src/: CMakeLists.txt  LibstartupConfig.cmake.in  cyclecounter.c  reset_handler.s  system.cpp
src/gloss/: CMakeLists.txt  STM32F767ZITx_FLASH.ld  reset_handler.s
src/libstartup/: CMakeLists.txt  reset_handler.s
src/libstartup_inline/: CMakeLists.txt  reset_handler.s  system.cpp
src/libstartup_tiny/: CMakeLists.txt  system.cpp
src/st/: CMakeLists.txt  startup_stm32f767xx.s
src/stm32f7/: CMakeLists.txt  vector_table.cpp
