
add_subdirectory(001_st_baseline)
add_subdirectory(002_st_cpp_options)
add_subdirectory(003_st_nostartfiles)
add_subdirectory(004_st_nosys)
add_subdirectory(005_custom_startup)
add_subdirectory(006_custom_linkerscript)
add_subdirectory(007_custom_tiny_memset)
add_subdirectory(008_custom_inline)

add_subdirectory(010_modm)
add_subdirectory(011_libgloss)

#
# todo: picolibc
#